--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -9,8 +9,6 @@
     crossorigin="anonymous">
   <link href="/css/category.css" rel="stylesheet">
 
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
@@ -23,16 +21,18 @@
 
   <div class="container">
 
-    <h1 class="text-center">{{categoryName}}</h1>
+    <h3 class="text-left">{{categoryName}}</h3>
 
-      <div class="col text-left">
-        <a href="/">Back</a>
-      </div>
+    <div class="col text-left">
+      <a href="/">Back</a>
+    </div>
+
     <div class="row">
+
       {{#each category }}
-      <div class="col-4 food-column">
+      <div class="col-6">
         <a href="../food/{{name}}" id="{{id}}">
-          <div class="card text-white border-0 food-card-other">
+          <div class="card text-white">
             <img class="food-card-img" src="../images/{{image}}" alt="Card image">
             <div class="card-img-overlay text-center align-middle outer-name">
               <h3 class="inner-name">
@@ -43,6 +43,7 @@
         </a>
       </div>
       {{/each}}
+      
     </div>
 
   </div>
@@ -50,7 +51,7 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/js/navbar.js"></script>
   <script src="/js/bootstrap.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-database.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
