--- a/public/css/category.css
+++ b/public/css/category.css
@@ -1,24 +1,35 @@
-.food-column {
-    padding: 0px;
-}
 
 .food-card-img {
+    width: 100%;
+    max-width: 100%;
+    height: 20vh;
+    max-height: 20vh;
     object-fit: cover;
-    width: auto;
-    height: 25vw;
+    padding-bottom: 10px;
 }
 
-.inner-name {
-    background-color: rgba(34, 34, 34, 0.8);
-    padding: 2.5%;
-    border-radius: 10px;
-    margin: auto;
-    font-size: 3.5vw;
+.container {
+    width: 100%;
+    max-width: 700px;
 }
 
-.outer-name {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+#top-image {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    max-height: 25vh;
+    object-fit: cover;
 }
 
+#top-text{
+    padding-top: 8px;
+    padding-bottom: 10px;
+}
+
+.food-link{
+    text-decoration: none !important;
+    color: black;
+}
+.col-info {
+    padding-left: 0px;
+}
