--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,12 @@
 
 <body>
 
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="dummyBar">
+    <a class="navbar-brand" href="/">EZ Cooking</a>
+  </nav>
   <div id="topNavBar"></div>
+
 
   <div class="container">
     <h3 id="title">Learn to cook!</h3>
