--- a/public/css/category.css
+++ b/public/css/category.css
@@ -15,10 +15,13 @@
 
 #top-image {
     width: 100%;
-    max-width: 100%;
+    max-width: 700px;
     height: auto;
     max-height: 25vh;
     object-fit: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #top-text{
