--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
   <link href="/css/category.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/animate.min.css">
 
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -17,9 +18,12 @@
 
 <body>
 
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="dummyBar">
+    <a class="navbar-brand" href="/">EZ Cooking</a>
+  </nav>
   <div id="topNavBar"></div>
 
-  <img id="top-image" src="../images/{{categoryName}}.jpg">
+  <img class="animated fadeIn" id="top-image" src="../images/{{categoryImage}}">
 
   <div class="container">
 
