--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -13,7 +13,12 @@
 
 <body onload="setPageType('Favorites', 'none');"> 
 
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="dummyBar">
+    <a class="navbar-brand" href="/">EZ Cooking</a>
+  </nav>
   <div id="topNavBar"></div>
+
 
   <div class="container">
 
