--- a/views/ingTool.handlebars
+++ b/views/ingTool.handlebars
@@ -12,7 +12,12 @@
 
 <body>
 
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="dummyBar">
+    <a class="navbar-brand" href="/">EZ Cooking</a>
+  </nav>
   <div id="topNavBar"></div>
+
 
   <div class="container">
 
@@ -51,12 +56,12 @@
     <div class="row center">
       <div class="col">
         <button class="button">
-        <a href="/food/{{name}}">Back To Dish</a>
+        <a class="text-no-hyperlink" href="/food/{{name}}">Back To Dish</a>
         </button>
       </div>
       <div class="col">
         <button class="button">
-        <a href="/instructions/{{name}}">Next</a>
+        <a class="text-no-hyperlink" href="/instructions/{{name}}">Next</a>
         </button>
       </div>
     </div>
