--- a/views/ingredientsTools.handlebars
+++ b/views/ingredientsTools.handlebars
@@ -12,7 +12,12 @@
 
 <body>
 
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="dummyBar">
+    <a class="navbar-brand" href="/">EZ Cooking</a>
+  </nav>
   <div id="topNavBar"></div>
+
 
   <div class="container">
 
