--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -54,10 +54,15 @@
       </div>
 
       <div class="col-12">
-        <div class="d-flex justify-content-center fixed-bottom">
+        <div class="fixed-bottom bg-half-dark" id="footer">
+          <a href="/privacy">Privacy Policy</a>
+          <br>
+          <a href="/terms">Terms and Conditions</a>
+          <br>
           <p id="login-status">You are not logged in.</p>
         </div>
       </div>
+
     </div>
 
   </div>
