--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -12,23 +12,23 @@
 
 <body>
 
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light" id="dummyBar">
     <a class="navbar-brand" href="/">EZ Cooking</a>
   </nav>
   <div id="topNavBar"></div>
 
-
   <div class="container">
-
-    <h1 class="text-center">About EZ Cooking</h1>
+    <h3>About EZ Cooking</h3>
 
     <div class="row">
-      
+
       <div class="col">
         <p>This is where we talk about the creators of EZ Cooking.</p>
         <br>
-        <p>To be built later!</p>
+        <a href="/privacy">Privacy Policy</a>
+        <br>
+        <a href="/terms">Terms and Conditions</a>
+        <br>
       </div>
 
     </div>
