--- a/views/ingTool.handlebars
+++ b/views/ingTool.handlebars
@@ -10,7 +10,7 @@
   <link href="/css/food.css" rel="stylesheet">
 </head>
 
-<body>
+<body onload="extractTool('{{name}}');">
 
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light" id="dummyBar">
@@ -71,6 +71,7 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/js/navbar.js"></script>
   <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/toolsIngredientsFunctions.js"></script>
 
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-auth.js"></script>
