--- a/views/instructions.handlebars
+++ b/views/instructions.handlebars
@@ -10,7 +10,8 @@
   <link href="/css/instructions.css" rel="stylesheet">
 </head>
 
-<body>
+
+<body onload="extractRecipe('{{name}}');">
 
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light" id="dummyBar">
