looks like we have profile pictures

--- a/views/share.handlebars
+++ b/views/share.handlebars
@@ -18,21 +18,17 @@
   </nav>
   <div id="topNavBar"></div>
 
-
   <div class="container">
-
 
     <div class="row">
 
       <div class="col">
 
-        <h3>
-          <strong>Share Your Creation</strong>
-        </h3>
+        <h3>Share Your Creation </h3>
 
         <p>Take a picture of your food.</p>
 
-        <input type="file" accept="image/*">
+        <input type="file" accept="image/*" id="fie-input">
 
         <!-- <button type="button" onclick="take_picture()">Take a picture</button> -->
 
