--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,7 +4,7 @@
 
 .inner-name {
     padding-left: 10px;
-    padding-top:8px;
+    padding-top:10px;
     color: black;
 }
 
@@ -31,7 +31,7 @@
 
 .food-img {
     width: 100%;
-    max-width: 100%;
+    max-width: 670px;
     height: auto;
     max-height: 25vh;
     object-fit: cover;
