--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -13,7 +13,6 @@
 
 <body onload="setPageType('Favorites', 'none');"> 
 
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light" id="dummyBar">
     <a class="navbar-brand" href="/">EZ Cooking</a>
   </nav>
@@ -22,7 +21,7 @@
 
   <div class="container">
 
-    <h1 class="text-center">Favorites</h1>
+    <h3>Favorites</h3>
 
     <div class="row">
       <div class="col">
