--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,3 @@
-#title {
-    padding: 10px;
-}
 
 .inner-name {
     padding-left: 10px;
@@ -18,7 +15,6 @@
     justify-content: center;
     flex-direction: column;
 }
-
 .container {
     padding : 0px;
     width: 100%;
@@ -39,4 +35,8 @@
 
 .food-link{
     text-decoration: none !important;
+}
+
+.container {
+    background-color: white;
 }
