--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -7,18 +7,18 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
-  <link href="/css/category.css" rel="stylesheet">
+  <link href="/css/ez-styles.css" rel="stylesheet">
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="dummyBar">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="dummyBar">
     <a class="navbar-brand" href="/">EZ Cooking</a>
   </nav>
   <div id="topNavBar"></div>
 
-  <div class="container">
-    <h3>About EZ Cooking</h3>
+  <div class="container px-2 px-md-0">
+    <h3 id="title-no-lr-padding">About EZ Cooking</h3>
 
     <div class="row">
 
