--- a/views/finish.handlebars
+++ b/views/finish.handlebars
@@ -9,12 +9,13 @@
     crossorigin="anonymous">
   <link href="/css/category.css" rel="stylesheet">
   <link href="/css/finishPage.css" rel="stylesheet">
+  <link href="/css/ez-styles.css" rel="stylesheet">
 </head>
 
 <body>
 
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="dummyBar">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="dummyBar">
     <a class="navbar-brand" href="/">EZ Cooking</a>
   </nav>
   <div id="topNavBar"></div>
