--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -27,7 +27,8 @@
 
   <div class="container">
 
-    <h3 id="top-text">{{categoryName}}</h3>
+
+    <h3 id="top-text"><strong>{{categoryName}}</strong></h3>
 
     <div class="row">
 
@@ -37,7 +38,7 @@
           <img class="food-card-img" src="../images/{{image}}" alt="Card image">
         </a>
       </div>
-      <div class="col-4 col-info">
+      <div class="col-4 col-info col-color">
         <a class="food-link" href="../food/{{name}}">
           <h5 class="inner-name">
             {{name}}
