--- a/public/css/food.css
+++ b/public/css/food.css
@@ -44,12 +44,14 @@ h5 {
 .row-adj {
 	margin-top: 20px;
 }
-
-.tools {
-	color: #B27638;
-}
 .center {
 	text-align: center;
+}
+.right {
+  text-align: right;
+}
+.underline {
+  text-decoration: underline;
 }
 
 #picture-wrapper {
@@ -79,4 +81,8 @@ h5 {
 .text-no-hyperlink {
   text-decoration: none !important;
   color: black;
+}
+
+body {
+    background-color: #EEFFFF;
 }
