--- a/views/food.handlebars
+++ b/views/food.handlebars
@@ -48,9 +48,13 @@
       </div>
     </div>
 
+    <div id ="stepsbox">
+
     {{#each steplist}}
     <p id="steps">{{summary}}</p>
     {{/each}}
+
+    </div>
 
   </div>
 
