--- a/views/instructions.handlebars
+++ b/views/instructions.handlebars
@@ -111,6 +111,17 @@
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
   <script defer src="/js/firebaseCheck.js"></script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114830772-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114830772-1');
+</script>
+
+
 </body>
 
 </html>
