--- a/views/privacy.handlebars
+++ b/views/privacy.handlebars
@@ -124,6 +124,17 @@
     <a href="https://app-privacy-policy-generator.firebaseapp.com/"
       target="_blank">App Privacy Policy Generator</a>
   </p>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114830772-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114830772-1');
+</script>
+
 </body>
 
 </html>
