--- a/views/share.handlebars
+++ b/views/share.handlebars
@@ -11,33 +11,33 @@
   <link href="/css/ez-styles.css" rel="stylesheet">
 </head>
 
-<body>
-
+<body onload="setPageType('Share', '{{name}}');">
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="dummyBar">
     <a class="navbar-brand" href="/">EZ Cooking</a>
   </nav>
   <div id="topNavBar"></div>
 
-  <div class="container">
+  <div class="container px-2 px-md-0">
 
     <div class="row">
 
       <div class="col">
 
-        <h3>Share Your Creation </h3>
+        <h3 id="title-no-lr-padding">Share Your Creation </h3>
 
         <p>Take a picture of your food.</p>
 
-        <input type="file" accept="image/*" id="fie-input">
+        <form id="form1" runat="server">
+          <input type='file' id="imgInp"/>
+          <img class="img-fluid" id="blah" src="#" alt="your image" />
+        </form>
 
-        <!-- <button type="button" onclick="take_picture()">Take a picture</button> -->
-
-        <!-- <img src="" id="image-preview" class="img-fluid" alt="image preview"> -->
+        <!-- <video src="" id="image-preview" class="img-fluid" alt="image preview"> -->
 
         <br>
 
-        <button type="button" onclick="share()">Share</button>
+        <button type="button" onclick="share('{{name}}')">Share</button>
 
         <br>
 
@@ -52,7 +52,6 @@
   </div>
 
   <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="/js/navbar.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-auth.js"></script>
