--- a/public/css/ez-styles.css
+++ b/public/css/ez-styles.css
@@ -20,3 +20,22 @@
 html {
     overflow-x: hidden;
 }
+
+body {
+    background-color: #FCFCE3;
+}
+
+.button {
+    border-radius: 3px;
+    background-color: #e7e7e7;
+    border: none;
+    color: black;
+    text-align: center;
+    font-size: 18px; 
+    padding: 12px;
+    max-width: 160px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 0px;
+  }
+  
