--- a/views/foodGallery.handlebars
+++ b/views/foodGallery.handlebars
@@ -2,51 +2,57 @@
 <html>
 
 <head>
-  <title>EZ Cooking - {{categoryName}}</title>
+  <title>EZ Cooking - {{name}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
-  <link href="/css/category.css" rel="stylesheet">
+  <link href="/css/ez-styles.css" rel="stylesheet">
+  <link href="/css/foodGallery.css" rel="stylesheet">
 </head>
 
-<body>
+<body onload="setPageType('Food Gallery', '{{name}}');">
 
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="dummyBar">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="dummyBar">
     <a class="navbar-brand" href="/">EZ Cooking</a>
   </nav>
   <div id="topNavBar"></div>
 
+  <div class="container px-3 px-md-0">
 
-  <div class="container">
+    <h3 id="title-no-lr-padding">Gallery - {{name}}</h3>
 
-    <h1><strong>Food Gallery Page</strong></h1>
-
-    <a href="/">Back To Home</a>
-
-    <div class="row">
-      
-      <div class="col">
-
+    <div class="row px-2 px-md-0" id="button-row">
+      <div class="col-6 text-left">
+        <button class="button">
+          <a class="text-no-hyperlink" href="/food/{{name}}">Back</a>
+        </button>
       </div>
+    </div>
+
+    <div class="row no-gutters" id="food-row">
+
     </div>
 
   </div>
 
   <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="/js/navbar.js"></script>
   <script src="/js/bootstrap.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
+  <script src="/js/firebaseCheck.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114830772-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114830772-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'UA-114830772-1');
-</script>
+    gtag('config', 'UA-114830772-1');
+  </script>
 
 </body>
 
