updated json and a/b

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
-</head>
+
 
 <body>
 
@@ -31,7 +31,7 @@
     <div class="row">
       {{#if viewAlt}}
 
-      <!-- A/B Testing Homepage
+      <!-- A/B Testing Homepage -->
 
       <div class="row">
         {{#each categories}}
@@ -46,7 +46,7 @@
             </a>
         </div>
         {{/each}}
-      </div>  -->
+      </div>  
 
       {{else}}
       {{#each categories}}
