--- a/public/css/ez-styles.css
+++ b/public/css/ez-styles.css
@@ -6,12 +6,12 @@
 #title-no-lr-padding {
     padding: 10px;
     padding-top: 13px;
-    padding-left : 0px;
-    padding-right : 0px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .container {
-    padding : 0px;
+    padding: 0px;
     width: 100%;
     max-width: 700px;
     overflow-x: hidden;
@@ -31,14 +31,19 @@ body {
     border: none;
     color: black;
     text-align: center;
-    font-size: 18px; 
+    font-size: 18px;
     padding: 12px;
     max-width: 160px;
     transition: all 0.5s;
     cursor: pointer;
     margin: 0px;
-  }
-  
+}
+
+.button:hover {
+    background-color: #008CBA;
+    color: white;
+}
+
 .col-pad {
     padding: 5px;
 }
@@ -60,6 +65,18 @@ body {
     margin: 0px;
     border-radius: 20px
 }
+
 h6 {
     font-size: 20px;
+}
+
+
+.text-no-hyperlink {
+    text-decoration: none !important;
+    color: black;
+  }
+  
+  
+#button-row {
+    padding-bottom: 10px;
 }
