added click tracking on index and category page

--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -34,7 +34,7 @@
 
       {{#each category }}
       <div class="col-8">
-        <a href="../food/{{name}}">
+        <a class="food-link" href="../food/{{name}}">
           <img class="food-card-img" src="../images/{{image}}" alt="Card image">
         </a>
       </div>
@@ -60,6 +60,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
   <script src="/js/firebaseCheck.js"></script>
+  <script src="/js/category.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114830772-1"></script>
