--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -78,6 +78,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
   <script src="/js/firebaseCheck.js"></script>
+  <script src="/js/indexAnalytics.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114830772-1"></script>
