--- a/public/css/share.css
+++ b/public/css/share.css
@@ -1,10 +1,6 @@
 #image-preview {
-    padding : 10px;
-}
-
-h4 {
-	text-align: center;
-	margin-top: 50px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 #choose-file {
@@ -12,14 +8,4 @@ h4 {
 	margin-top: 10px;
 	margin-left: 22px;
 	text-align: center;
-}
-
-#share {
-	text-align: center;
-	margin-left: -248px;
-	margin-bottom: 60px;
-}
-
-body {
-    background-color: #FFEC9C;
 }
