--- a/views/share.handlebars
+++ b/views/share.handlebars
@@ -24,13 +24,22 @@
     <div class="row">
 
       <div class="col-12">
+
         <div class="px-2 px-md-0">
           <h3 id="title-no-lr-padding">Share Your Creation </h3>
-          <p class="center">Snap a picture of your meal!
-            <p>
-              <form id="form1" runat="server">
-                <input type='file' id="imgInp" />
-              </form>
+          <p class="center">Snap a picture of your meal!</p>
+
+          <form id="form1" runat="server">
+
+            <div class="form-group">
+              <input type='file' class="form-control-file" id="imgInp" />
+            </div>
+            <div class="form-group">
+              <label for="descriptionArea">Description</label>
+              <textarea class="form-control" id="descriptionArea" rows="3"></textarea>
+            </div>
+          </form>
+
         </div>
       </div>
 
