--- a/public/css/ez-styles.css
+++ b/public/css/ez-styles.css
@@ -75,7 +75,18 @@ h6 {
     color: black;
   }
   
-  
 #button-row {
     padding-bottom: 10px;
+}
+#stepsbox p {
+border-bottom: thin solid #D3D3D3;
+padding-top: 7px;
+padding-bottom: 2px;
+}
+
+#ti_box {
+    margin-bottom: 20px;
+}
+#tools {
+    margin-bottom: 20px;
 }
